# google-birthday-liberator

./: .gitignore  Makefile  README.md  create_birthday_calendar.py  filter_contacts.py  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_create_calendar.py  test_filter_contacts.py  test_integration.py
